--- a/common/容器：地震波.html
+++ b/common/容器：地震波.html
@@ -81,7 +81,8 @@
 
 <p>地震波，装载一组地震波数据</p>
 <h2 id="示例">示例</h2>
-<p>暂无示例文件，待后续补充</p>
+<p><img src="../file/%E5%AE%B9%E5%99%A8%EF%BC%9A%E5%9C%B0%E9%9C%87%E6%B3%A2_01.png" alt="示例文件:容器：地震波_01.png"></p>
+<p><a href="../file/%E5%AE%B9%E5%99%A8%EF%BC%9A%E5%9C%B0%E9%9C%87%E6%B3%A2_01.pgz">示例文件:容器：地震波_01.pgz</a></p>
 <h2 id="版本">版本</h2>
 <p>4.0</p>
 </article>
