--- a/common/特征周期.html
+++ b/common/特征周期.html
@@ -100,7 +100,8 @@
 </tbody>
 </table>
 <h2 id="示例">示例</h2>
-<p>暂无示例文件，待后续补充</p>
+<p><img src="../file/%E7%89%B9%E5%BE%81%E5%91%A8%E6%9C%9F_01.png" alt="示例文件:特征周期_01.png"></p>
+<p><a href="../file/%E7%89%B9%E5%BE%81%E5%91%A8%E6%9C%9F_01.pgz">示例文件:特征周期_01.pgz</a></p>
 <h2 id="版本">版本</h2>
 <p>4.0</p>
 </article>
