--- a/common/自动筛选地震波.html
+++ b/common/自动筛选地震波.html
@@ -130,7 +130,8 @@
 根据天然波列表和人工波列表以及规范基底剪力的要求自动筛选地震波，具体操作原理同YJK弹性时程模块中的“自动筛选符合规范要求地震波组合”。只输出前50种组合可能，不足50种的按照实际组合数量输出。
 GAMA自动筛选的地震波可能会和YJK主程序的选波组合结果不一样，但是GAMA自动筛选的地震波是无误的，可以通过选波计算结果文件进行对比。GAMA的自动筛选地震波的计算结果文件命名为WaveCombinRst.out，放置于模型文件夹下方的设计结果文件夹内；YJK主程序选波的计算结果文件命名为wavecombin.out（多遇地震）、wavecombin_SF.out（设防地震）、wavecombin_HY.out（罕遇地震），同样放置于模型文件夹下方的设计结果文件夹内。|容器数据|NSSeismicWaveInfo</p>
 <h2 id="示例">示例</h2>
-<p>暂无示例文件，待后续补充</p>
+<p><img src="../file/%E8%87%AA%E5%8A%A8%E7%AD%9B%E9%80%89%E5%9C%B0%E9%9C%87%E6%B3%A2_01.png" alt="示例文件:自动筛选地震波_01.png"></p>
+<p><a href="../file/%E8%87%AA%E5%8A%A8%E7%AD%9B%E9%80%89%E5%9C%B0%E9%9C%87%E6%B3%A2_01.pgz">示例文件:自动筛选地震波_01.pgz</a></p>
 <h2 id="版本">版本</h2>
 <p>4.0</p>
 </article>
