--- a/common/获取地震波.html
+++ b/common/获取地震波.html
@@ -125,7 +125,8 @@
 </tbody>
 </table>
 <h2 id="示例">示例</h2>
-<p>暂无示例文件，待后续补充</p>
+<p><img src="../file/%E8%8E%B7%E5%8F%96%E5%9C%B0%E9%9C%87%E6%B3%A2_01.png" alt="示例文件:获取地震波_01.png"></p>
+<p><a href="../file/%E8%8E%B7%E5%8F%96%E5%9C%B0%E9%9C%87%E6%B3%A2_01.pgz">示例文件:获取地震波_01.pgz</a></p>
 <h2 id="版本">版本</h2>
 <p>4.0</p>
 </article>
