--- a/common/计算与输出参数.html
+++ b/common/计算与输出参数.html
@@ -149,7 +149,8 @@
 </tbody>
 </table>
 <h2 id="示例">示例</h2>
-<p>暂无示例文件，待后续补充</p>
+<p><img src="../file/%E8%AE%A1%E7%AE%97%E4%B8%8E%E8%BE%93%E5%87%BA%E5%8F%82%E6%95%B0_01.png" alt="示例文件:计算与输出参数_01.png"></p>
+<p><a href="../file/%E8%AE%A1%E7%AE%97%E4%B8%8E%E8%BE%93%E5%87%BA%E5%8F%82%E6%95%B0_01.pgz">示例文件:计算与输出参数_01.pgz</a></p>
 <h2 id="版本">版本</h2>
 <p>4.0</p>
 </article>
