--- a/common/分解弹性时程计算参数.html
+++ b/common/分解弹性时程计算参数.html
@@ -137,7 +137,8 @@
 </tbody>
 </table>
 <h2 id="示例">示例</h2>
-<p>暂无示例文件，待后续补充</p>
+<p><img src="../file/%E5%88%86%E8%A7%A3%E5%BC%B9%E6%80%A7%E6%97%B6%E7%A8%8B%E8%AE%A1%E7%AE%97%E5%8F%82%E6%95%B0_01.png" alt="示例文件:分解弹性时程计算参数_01.png"></p>
+<p><a href="../file/%E5%88%86%E8%A7%A3%E5%BC%B9%E6%80%A7%E6%97%B6%E7%A8%8B%E8%AE%A1%E7%AE%97%E5%8F%82%E6%95%B0_01.pgz">示例文件:分解弹性时程计算参数_01.pgz</a></p>
 <h2 id="版本">版本</h2>
 <p>4.0</p>
 </article>
