--- a/common/弹性时程工况组合.html
+++ b/common/弹性时程工况组合.html
@@ -155,7 +155,8 @@
 </tbody>
 </table>
 <h2 id="示例">示例</h2>
-<p>暂无示例文件，待后续补充</p>
+<p><img src="../file/%E5%BC%B9%E6%80%A7%E6%97%B6%E7%A8%8B%E5%B7%A5%E5%86%B5%E7%BB%84%E5%90%88_01.png" alt="示例文件:弹性时程工况组合_01.png"></p>
+<p><a href="../file/%E5%BC%B9%E6%80%A7%E6%97%B6%E7%A8%8B%E5%B7%A5%E5%86%B5%E7%BB%84%E5%90%88_01.pgz">示例文件:弹性时程工况组合_01.pgz</a></p>
 <h2 id="版本">版本</h2>
 <p>4.0</p>
 </article>
