--- a/common/弹性时程选波参数.html
+++ b/common/弹性时程选波参数.html
@@ -167,7 +167,8 @@
 </tbody>
 </table>
 <h2 id="示例">示例</h2>
-<p>暂无示例文件，待后续补充</p>
+<p><img src="../file/%E5%BC%B9%E6%80%A7%E6%97%B6%E7%A8%8B%E9%80%89%E6%B3%A2%E5%8F%82%E6%95%B0_01.png" alt="示例文件:弹性时程选波参数_01.png"></p>
+<p><a href="../file/%E5%BC%B9%E6%80%A7%E6%97%B6%E7%A8%8B%E9%80%89%E6%B3%A2%E5%8F%82%E6%95%B0_01.pgz">示例文件:弹性时程选波参数_01.pgz</a></p>
 <h2 id="版本">版本</h2>
 <p>4.0</p>
 </article>
