--- a/common/抗震设防烈度.html
+++ b/common/抗震设防烈度.html
@@ -100,7 +100,8 @@
 </tbody>
 </table>
 <h2 id="示例">示例</h2>
-<p>暂无示例文件，待后续补充</p>
+<p><img src="../file/%E6%8A%97%E9%9C%87%E8%AE%BE%E9%98%B2%E7%83%88%E5%BA%A6_01.png" alt="示例文件:抗震设防烈度_01.png"></p>
+<p><a href="../file/%E6%8A%97%E9%9C%87%E8%AE%BE%E9%98%B2%E7%83%88%E5%BA%A6_01.pgz">示例文件:抗震设防烈度_01.pgz</a></p>
 <h2 id="版本">版本</h2>
 <p>4.0</p>
 </article>
