--- a/common/自定义人工波详细信息.html
+++ b/common/自定义人工波详细信息.html
@@ -119,7 +119,8 @@
 </tbody>
 </table>
 <h2 id="示例">示例</h2>
-<p>暂无示例文件，待后续补充</p>
+<p><img src="../file/%E8%87%AA%E5%AE%9A%E4%B9%89%E4%BA%BA%E5%B7%A5%E6%B3%A2%E8%AF%A6%E7%BB%86%E4%BF%A1%E6%81%AF_01.png" alt="示例文件:自定义人工波详细信息_01.png"></p>
+<p><a href="../file/%E8%87%AA%E5%AE%9A%E4%B9%89%E4%BA%BA%E5%B7%A5%E6%B3%A2%E8%AF%A6%E7%BB%86%E4%BF%A1%E6%81%AF_01.pgz">示例文件:自定义人工波详细信息_01.pgz</a></p>
 <h2 id="版本">版本</h2>
 <p>4.0</p>
 </article>
